--- a/PORTF/humanas/index.html
+++ b/PORTF/humanas/index.html
@@ -71,11 +71,10 @@
                                 <b>Assunto:</b> Fim da 2ª Guerra Mundial e Descolonização da África e da Ásia. <br>
                                 <b>Objetivo:</b> Escolher um país da África ou da Ásia que tenha se tornado independente entre 1940 e 1970 e responder as questões sobre o país escolhido. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade divertida e simples de se realizar. <br>
-                                <b>Habilidades:</b> 
-                                <b>H30</b> – Analisar as lutas sociais e conquistas obtidas no que se refere às mudanças nas legislações ou nas políticas  públicas.
-                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e  ambientais no contexto da sociedade brasileira.
-                                <b>H40</b> – Analisar o processo de formação das instituições sociais e políticas, compreendendo seu papel na sociedade. 
- <br>
+                                <b>Habilidades:</b> <br>
+                                <b>H30</b> – Analisar as lutas sociais e conquistas obtidas no que se refere às mudanças nas legislações ou nas políticas  públicas. <br>
+                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e  ambientais no contexto da sociedade brasileira. <br>
+                                <b>H40</b> – Analisar o processo de formação das instituições sociais e políticas, compreendendo seu papel na sociedade. <br> <br>
                                 <b><a href="https://www.canva.com/design/DAGwnkKreEs/x07mkiQkUCfYXtxlhjGTfQ/edit?utm_content=DAGwnkKreEs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
                             </p>
                         </div>
@@ -89,13 +88,13 @@
                                 <b>Assunto:</b> 2ª Guerra Mundial. <br>
                                 <b>Objetivo:</b> A atividade consiste na criação de uma planilha com dados estatísticos. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade meio chata de se realizar. <br>
-                                <b>Habilidades:</b> 
-                                <b>C5</b> – Aplicar os fundamentos da cidadania, favorecendo uma atuação consciente do indivíduo  na sociedade.
-                                <b>C6</b> – Avaliar a sociedade como um sistema complexo, estruturado sob os aspectos políticos,  econômicos, sociais e geoambientais. 
-                                <b>H30</b> – Analisar as lutas sociais e conquistas obtidas no que se refere às mudanças nas legislações ou nas políticas  públicas.
-                                <b>H36</b> – Propor interpretações e soluções para problemas identificados no contexto social brasileiro. 
-                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e  ambientais no contexto da sociedade brasileira. 
-                                <b>H40</b> – Analisar o processo de formação das instituições sociais e políticas, compreendendo seu papel na sociedade.<br>
+                                <b>Habilidades:</b> <br>
+                                <b>C5</b> – Aplicar os fundamentos da cidadania, favorecendo uma atuação consciente do indivíduo  na sociedade.<br>
+                                <b>C6</b> – Avaliar a sociedade como um sistema complexo, estruturado sob os aspectos políticos,  econômicos, sociais e geoambientais. <br>
+                                <b>H30</b> – Analisar as lutas sociais e conquistas obtidas no que se refere às mudanças nas legislações ou nas políticas  públicas. <br>
+                                <b>H36</b> – Propor interpretações e soluções para problemas identificados no contexto social brasileiro. <br>
+                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e  ambientais no contexto da sociedade brasileira. <br>
+                                <b>H40</b> – Analisar o processo de formação das instituições sociais e políticas, compreendendo seu papel na sociedade.<br> <br>
                                 <b><a href="https://docs.google.com/spreadsheets/d/1uwELv0TnOw9JE8XUjJc9bgVBtHSi50Ewl0OpAK3SmoE/edit?usp=sharing">Planilha</a></b>
                             </p>
                         </div>
@@ -109,13 +108,13 @@
                                 <b>Assunto:</b> UR fascismo a partir da obra Umberto Eco. <br>
                                 <b>Objetivo:</b> A atividade consiste as questões solicitadas se baseando no vídeo passado em sala. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade simples, sem comentários sobre. <br>
-                                <b>Habilidades:</b> 
-                                <b>C2</b> – Compreender a importância do trabalho na constituição das sociedades e na formação  dos sujeitos.  
-                                <b>C4</b> – Interpretar dados e informações referentes aos aspectos políticos, econômicos, sociais e  culturais da sociedade contemporânea.
-                                <b>H10</b> – Compreender as transformações no mundo do trabalho, geradas por mudanças na ordem econômica.
-                                <b>H22</b> – Analisar, na perspectiva humana e social, as principais características e dinâmicas dos fluxos da sociedade. 
-                                <b>H26</b> – Comparar pontos de vista e ações práticas do indivíduo ou grupo social em diferentes contextos. 
-                                <b>H27</b> – Analisar hipóteses e questões ambientais, sociais, econômicas, políticas e culturais, a partir de leituras e  debates.<br>
+                                <b>Habilidades:</b> <br>
+                                <b>C2</b> – Compreender a importância do trabalho na constituição das sociedades e na formação  dos sujeitos. <br> 
+                                <b>C4</b> – Interpretar dados e informações referentes aos aspectos políticos, econômicos, sociais e  culturais da sociedade contemporânea. <br>
+                                <b>H10</b> – Compreender as transformações no mundo do trabalho, geradas por mudanças na ordem econômica. <br>
+                                <b>H22</b> – Analisar, na perspectiva humana e social, as principais características e dinâmicas dos fluxos da sociedade. <br>
+                                <b>H26</b> – Comparar pontos de vista e ações práticas do indivíduo ou grupo social em diferentes contextos. <br>
+                                <b>H27</b> – Analisar hipóteses e questões ambientais, sociais, econômicas, políticas e culturais, a partir de leituras e  debates.<br> <br>
                                 <b><a href="https://docs.google.com/document/d/1LCNqkK7PXLTDDJEhcbCcQF4CqY5tYIubAFgSwg1pPwA/edit?usp=sharing">Docs</a></b>
                             </p>
                         </div>
@@ -125,9 +124,52 @@
                 <div class="p1texto"><h2>3º Trimestre</h2></div>
                 <div class="container">
                     <div class="caixa">
+                        <img src="../fotos/atv1Humanas.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda :]</p>
+                            <div class="atv"> <h4>Atividade 1</h4> </div>
+                            <p>
+                                <b>Assunto:</b> Anistia e Memória na América Latina. <br>
+                                <b>Objetivo:</b> Realizar uma comparação crítica entre os modos de lidar com o passado autoritário. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade simples e rápida de se realizar. <br>
+                                <b>Habilidades:</b> <br>
+                                <b>H4</b> – Compreender mudanças e permanências ao longo do tempo na constituição da sociedade. <br>
+                                <b>H10</b> – Compreender as transformações no mundo do trabalho, geradas por mudanças na ordem econômica. <br>
+                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e ambientais no contexto da sociedade brasileira. <br>
+                                <b><a href="https://www.canva.com/design/DAG4fj1Tst0/2dUh050lImLavm6N5sgwWg/edit?utm_content=DAG4fj1Tst0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
+                            </p>
+                        </div>
+                        </div>
+
+                        <div class="caixa">
+                        <img src="../fotos/atv2Humanas.png" alt="atividade 2">
+                        <div class="descricao">
+                            <div class="atv"> <h4>Atividade 2</h4> </div>
+                            <p>
+                                <b>Assunto:</b> O dia que durou 21 anos. <br>
+                                <b>Objetivo:</b> Compreender os diversos mecanismos econômicos, midiáticos, militares e de inteligência utilizados pelos Estados Unidos para influenciar e apoiar ativamente a deposição de João Goulart e a instauração do regime militar no Brasil em 1964. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade cujo tive que fazer um canva e juntar as informações com o meu grupo. <br>
+                                <b>Habilidades:</b> <br>
+                                <b>H21</b> – Reconhecer manifestações de indivíduos e grupos sociais nos diferentes contextos ao longo do tempo. <br>
+                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e ambientais no contexto da sociedade brasileira. <br>
+                                <b><a href="https://www.canva.com/design/DAG3pvno4wc/yYq4Frl_t_eDY1AE3Op9zw/view?utm_content=DAG3pvno4wc&utm_campaign=designshare&utm_medium=link&utm_source=viewer">Canva</a></b>
+                            </p>
+                        </div>
+                        </div>
+
+                        <div class="caixa">
+                        <img src="../fotos/atv3Humanas.png" alt="atividade 3">
+                        <div class="descricao">
+                            <div class="atv"> <h4>Atividade 3</h4> </div>
+                            <p>
+                                <b>Assunto:</b> República Liberal. <br>
+                                <b>Objetivo:</b> Imaginar que nosso grupo seriam os responsáveis pela construção de uma nova capital para o Brasil. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade um tanto que complexa, porem conseguimos a realizar bem. <br>
+                                <b>Habilidades:</b> <br>
+                                <b>H21</b> – Reconhecer manifestações de indivíduos e grupos sociais nos diferentes contextos ao longo do tempo. <br>
+                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e ambientais no contexto da sociedade brasileira. <br>
+                                <b><a href="https://www.canva.com/design/DAG1N0h1jXc/KJE0zR-8xh-2-u5zi5QkqQ/view?utm_content=DAG1N0h1jXc&utm_campaign=designshare&utm_medium=link&utm_source=viewer">Canva</a></b>
+                            </p>
+                        </div>
                         </div>
                     </div>
                 </div>
