--- a/PORTF/linguas/index.html
+++ b/PORTF/linguas/index.html
@@ -49,7 +49,7 @@
                                 <b>Assunto:</b> Site memórias Póstumas de Brás Cubas. <br>
                                 <b>Objetivo:</b> Criar um site no Google Sites e criar uma revista literária. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade um tanto que intrigante e por fato realmente interessante gostei dos livros sugeridos. <br>
-                                <b>Habilidades:</b>  H4/H24. <br>
+                                <b>Habilidades:</b>  H4/H24. <br> <br>
                                 <b><a href="https://sites.google.com/estudante.sesisenai.org.br/vozes-criativas/p%C3%A1gina-de-servi%C3%A7o">Site</a></b>
                             </p>
                         </div>
@@ -63,7 +63,7 @@
                                 <b>Assunto:</b> Comentario de Brás Cubas. <br>
                                 <b>Objetivo:</b> Fazer um comentario sobre o livro Memórias Póstumas de Brás Cubas. <br>
                                 <b>Crítica Pessoal:</b> Bons livros apesar do meu leve desinteresse, mas ainda assim consegui extrair algumas reflexões valiosas. <br>
-                                <b>Habilidades:</b> H17. <br>
+                                <b>Habilidades:</b> H17. <br> <br>
                                 <b><a href="https://sites.google.com/estudante.sesisenai.org.br/vozes-criativas/p%C3%A1gina-de-servi%C3%A7o">Site</a></b>
                             </p>
                         </div>
@@ -77,7 +77,7 @@
                                 <b>Assunto:</b> Comentario de Parque Industrial. <br>
                                 <b>Objetivo:</b> Fazer um comentario sobre o livro Memórias Póstumas de Brás Cubas. <br>
                                 <b>Crítica Pessoal:</b> Bons livros apesar do meu leve desinteresse, mas ainda assim consegui extrair algumas reflexões valiosas. <br>
-                                <b>Habilidades:</b> H17. <br>
+                                <b>Habilidades:</b> H17. <br> <br>
                                 <b><a href="https://sites.google.com/estudante.sesisenai.org.br/vozes-criativas/p%C3%A1gina-de-servi%C3%A7o">Site</a></b>
                             </p>
                         </div>
@@ -91,7 +91,7 @@
                                 <b>Assunto:</b> Atividade Pai contra Mãe. <br>
                                 <b>Objetivo:</b> Reescrever a história do ponto de vista da mãe. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade bem complexa, sinceramente não gostei de fazer. <br>
-                                <b>Habilidades:</b>  Não informado. <br>
+                                <b>Habilidades:</b>  Não informado. <br> <br>
                                 <b><a href="https://docs.google.com/document/d/1bcVuhK-LGxjdWN_woOG8f-g2MgmkGNei5hoB-hezOlM/edit?usp=sharing">docs</a></b>
                             </p>
                         </div>
@@ -105,7 +105,7 @@
                                 <b>Assunto:</b> Biografia Profissional. <br>
                                 <b>Objetivo:</b> Criar uma Biografia Profissional com nossa foto. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade um tanto que entendiante e simples. <br>
-                                <b>Habilidades:</b>  H22. <br>
+                                <b>Habilidades:</b>  H22. <br> <br>
                                 <b><a href="https://www.canva.com/design/DAGlZYZjs94/_uhtaLeXwkLo8hQWFvG7KA/edit?utm_content=DAGlZYZjs94&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
                             </p>
                         </div>
@@ -119,7 +119,7 @@
                                 <b>Assunto:</b> Atividade Site Informa ENEM. <br>
                                 <b>Objetivo:</b> Criar um Google Sites para reunir diversas fontes. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade bem complexa, porém divertida de fazer. <br>
-                                <b>Habilidades:</b>  H23. <br>
+                                <b>Habilidades:</b>  H23. <br> <br>
                                 <b><a href="https://sites.google.com/estudante.sesisenai.org.br/informa-enem-22/in%C3%ADcio">Site</a></b>
                             </p>
                         </div>
@@ -138,7 +138,7 @@
                                 <b>Assunto:</b> Site Revista literária. <br>
                                 <b>Objetivo:</b> Criar um site no Google Sites e criar uma revista literária. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade bastante instigante e, de fato, muito interessante. Apreciei bastante as obras recomendadas. <br>
-                                <b>Habilidades:</b>  H23. <br>
+                                <b>Habilidades:</b>  H23. <br> <br>
                                 <b><a href="https://sites.google.com/estudante.sesisenai.org.br/vozes-criativas/p%C3%A1gina-de-servi%C3%A7o">Site</a></b>
                             </p>
                         </div>
@@ -154,7 +154,7 @@
                                 <b>Crítica Pessoal:</b> Uma atividade bem simples e divertida de fazer. <br>
                                 <b>Habilidades:</b>  
                                 <b>H11</b> - Praticar vocábulos e expressões da Língua inglesa relativos a área profissional.
-                                <b>H25</b> - Interpretar textos em Língua Estrangeira Moderna (Inglês). <br>
+                                <b>H25</b> - Interpretar textos em Língua Estrangeira Moderna (Inglês). <br> <br>
                                 <b><a href="https://docs.google.com/document/d/1qGWkPXYW5wFCEoYCW-bQbJcviRtFg0m5wH_200z2RHw/edit?usp=sharing">Docs</a></b>
                             </p>
                         </div>
@@ -177,9 +177,52 @@
                 <div class="p1texto"><h2>3º Trimestre</h2></div>
                 <div class="container">
                     <div class="caixa">
+                          <img src="../fotos/notaRedLinguas.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda :]</p>
+                            <div class="atv"> <h4>Atividade 1</h4> </div>
+                            <p> 
+                                <b>Assunto:</b> Nota Redação Online <br>
+                                <b>Objetivo:</b> Realizar uma redação estilo ENEM. <br>
+                                <b>Crítica Pessoal:</b> Um tema que tinha um pouco dominio, uma nota bem média, tenho que melhorar minha acentuação. <br>
+                                <b>Habilidades:</b> <br>
+                                <b>H12</b> - Empregar recursos linguísticos para identificar e apresentar pontos de vista <br>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                          <img src="../fotos/linguas.jpg" alt="atividade 2">
+                        <div class="descricao">
+                            <div class="atv"> <h4>Atividade 2</h4> </div>
+                            <p> 
+                                <b>Assunto:</b> Obra de Salim Miguel <br>
+                                <b>Objetivo:</b> Realizar um Tik Tok/Reels sobre a obra de Salim Miguel. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade um pouco complexa de se realizar devido ao trabalho de me locomover ao local, porém foi divertida de realizar. <br>
+                                <b>Habilidades:</b> <br>
+                                <b>H4</b> – Reconhecer a pluralidade de manifestações artísticas e culturais como forma de integração entre pessoas e entre diferentes grupos sociais e étnicos. <br>
+                                <b>H12</b> – Empregar recursos linguísticos para identificar e apresentar pontos de vista. <br>
+                                <b>H15</b> – Produzir trabalhos individuais e coletivos, explorando materiais e técnicas ligados ao universo das composições artísticas e de práticas corporais. <br>
+                                <b>H16</b> – Relacionar práticas corporais e artísticas à própria vida, ao convívio social e à formação de identidades. <br> <br>
+                                <b><a href="xxx">Vídeo</a></b>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                          <img src="../fotos/cartaLinguagens.png" alt="atividade 3">
+                        <div class="descricao">
+                            <div class="atv"> <h4>Atividade 3</h4> </div>
+                            <p> 
+                                <b>Assunto:</b> Cartas e seus tipos <br>
+                                <b>Objetivo:</b> estudar o gênero Carta, pedido nos vestibulares da UFSC com uma certa frequência. <br>
+                                <b>Crítica Pessoal:</b> Tive uma dificuldade de realizar devido a eu não ter certeza de qual curso eu queria fazer. <br>
+                                <b>Habilidades:</b> <br>
+                                <b>H4</b> – Reconhecer a pluralidade de manifestações artísticas e culturais como forma de integração entre pessoas e entre diferentes grupos sociais e étnicos. <br>
+                                <b>H12</b> – Empregar recursos linguísticos para identificar e apresentar pontos de vista. <br>
+                                <b>H15</b> – Produzir trabalhos individuais e coletivos, explorando materiais e técnicas ligados ao universo das composições artísticas e de práticas corporais. <br>
+                                <b>H16</b> – Relacionar práticas corporais e artísticas à própria vida, ao convívio social e à formação de identidades. <br> <br>
+                                <b><a href="https://docs.google.com/document/d/1BRuAzTwlJiHPfvXzaEad0RPyGLH7WBIthLp-HvEo8MI/edit?usp=sharing">Docs</a></b>
+                            </p>
                         </div>
                     </div>
                 </div>
