--- a/PORTF/mtm/index.html
+++ b/PORTF/mtm/index.html
@@ -37,7 +37,7 @@
                                 <b>Assunto:</b> Quebrando a Banca(FILME). <br>
                                 <b>Objetivo:</b> Responder algumas perguntas sobre o filme e escrever um pequeno roteiro sobre um filme de probalidade. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade simples de se fazer, uma opinião neutra sobre a realização desta. <br>
-                                <b>Habilidades:</b>  C5 - H31 e H32. <br>
+                                <b>Habilidades:</b>  C5 - H31 e H32. <br> <br>
                                 <b><a href="https://docs.google.com/document/d/1PE_spm9XYv7dyYbZctOGjrpRgtSJ9Wi2Vwe3PZ2No78/edit?usp=sharing">Docs</a></b>
                             </p>
                         </div>
@@ -51,7 +51,7 @@
                                 <b>Assunto:</b> Jogo(Quebrando a Banca). <br>
                                 <b>Objetivo:</b> Desenvolver um jogo original utilizando os conceitos de análise combinatória, inspirado no filme Quebrando a Banca. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade complexa de se fazer, achei divertido de fazer. <br>
-                                <b>Habilidades:</b>  C5 - H30 e H31. <br>
+                                <b>Habilidades:</b>  C5 - H30 e H31. <br> <br>
                                 <b><a href="https://www.canva.com/design/DAGk0VnSwYY/QILqjJGXU3QWqyb6S-zGDw/edit?utm_content=DAGk0VnSwYY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
                             </p>
                         </div>
@@ -85,10 +85,10 @@
                                 <b>Objetivo:</b> Criar um formulario com um assunto escolhido pelo grupo e usar de estatística para realizar a media de respostas. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade complexa de se fazer, porem achei bem divertido de fazer. <br>
                                 <b>Habilidades:</b>  
-                                <b>C4</b> - Analisar e investigar  dados e informações de  natureza científica e  social, articulando diferentes áreas do conhecimento, compreendendo representações gráficas  e uso de modelos matemáticos, realizando  inferências, previsões e  tendências, para tomadas de decisão. 
-                               <b>H27</b> - Compreender informações estatísticas provenientes de naturezas distintas  (social, econômica, política ou científica) e formular juízos com base nessas  informações.
-                               <b>H28</b> - Calcular medidas de tendência central e de dispersão de um conjunto de  dados para aplicá-las e analisá-las em situações diversas no contexto das  ciências, das tecnologias, das atividades pessoais e profissionais. 
-                               <b>H29</b> - Construir tabelas e gráficos com recursos tecnológicos que permitam  simplificar cálculos, facilitar a leitura e a compreensão das informações, para  análise da realidade. <br>
+                                <b>C4</b> - Analisar e investigar  dados e informações de  natureza científica e  social, articulando diferentes áreas do conhecimento, compreendendo representações gráficas  e uso de modelos matemáticos, realizando  inferências, previsões e  tendências, para tomadas de decisão. <br>
+                               <b>H27</b> - Compreender informações estatísticas provenientes de naturezas distintas  (social, econômica, política ou científica) e formular juízos com base nessas  informações. <br>
+                               <b>H28</b> - Calcular medidas de tendência central e de dispersão de um conjunto de  dados para aplicá-las e analisá-las em situações diversas no contexto das  ciências, das tecnologias, das atividades pessoais e profissionais.  <br>
+                               <b>H29</b> - Construir tabelas e gráficos com recursos tecnológicos que permitam  simplificar cálculos, facilitar a leitura e a compreensão das informações, para  análise da realidade. <br> <br>
                                 <b><a href="https://www.canva.com/design/DAGsDdDrl6c/lzrO330BcGIcXPcDjVhH_A/edit?utm_content=DAGsDdDrl6c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
                             </p>
                         </div>
@@ -99,9 +99,20 @@
                 <div class="p1texto"><h2>3º Trimestre</h2></div>
                 <div class="container">
                     <div class="caixa">
+                        <img src="../fotos/atv1Mtm.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda :]</p>
+                           <div class="atv"> <h4>Atividade 1</h4> </div>
+                            <p>
+                                <b>Assunto:</b> Proporção e Razão. <br>
+                                <b>Objetivo:</b> Aplicar os conhecimentos de proporção e razão através da adaptação de receitas culinárias, promovendo a interdisciplinaridade entre Matemática e habilidades práticas do cotidiano. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade bem divertida de fazer, comi bastante bolo e aprendi as matérias em prática. <br>
+                                <b>Habilidades:</b>  <br>
+                                <b>C3</b> - Utilizar estratégias, conceitos, definições e procedimentos matemáticos para interpretar, construir modelos e resolver problemas em diversos contextos, analisando a plausibilidade dos resultados e a adequação das soluções propostas, de modo a construir argumentação consistente. <br>
+                                <b>C6</b> - Analisar dados e/ou informações técnicas e científicas, utilizando ferramentas matemáticas para demonstrar e defender resultados, na forma oral ou escrita, relativos à tecnologia da informação para auxiliar os processos gerenciais e as tomadas de decisões. <br>
+                               <b>H33</b> - Analisar eventos, fenômenos, experimentos ou questões por meio da  análise de elementos estatísticos para construção de relatórios e documentação de software. <br> <br>
+                                <b><a href="https://www.canva.com/design/DAGsDdDrl6c/lzrO330BcGIcXPcDjVhH_A/edit?utm_content=DAGsDdDrl6c&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
+                            </p>
+                        </div>
                         </div>
                     </div>
                 </div>
