--- a/PORTF/tecnico/index.html
+++ b/PORTF/tecnico/index.html
@@ -86,13 +86,20 @@
                 </div>
             </div>
 
-            <div class="p1texto"><h2>3º Trimestre IoT</h2></div>
+            <div class="p1texto"><h2>3º Trimestre Manutenção de Sistemas</h2></div>
             <div class="container">
-                <div class="caixa soon">
-                    <h4>Em breve</h4>
-                   
+               <div class="caixa">
+                    <img src="../fotos/xxx.png" alt="atividade 1">
+                    <div class="descricao">
+                        <div class="atv"><h4>Atividade 1</h4></div>
+                        <p>
+                            <b>Assunto:</b> Site de Escola de Musica. <br>
+                            <b>Objetivo:</b> Criar um site sobre uma escola de musica. <br>
+                            <b>Habilidades:</b> Não Informadas. <br>
+                            <b><a href="https://docs.google.com/spreadsheets/d/1hhlz2OcL8djmVgKhenEg98hQoq35EnAZt_ZCIujiTEA/edit?usp=sharing">Planilha</a></b>
+                        </p>
+                    </div>
                 </div>
-            </div>
         </main>
 
         <footer>
