--- a/PORTF/natureza/index.html
+++ b/PORTF/natureza/index.html
@@ -162,7 +162,7 @@
                                 <b>Objetivo:</b> Realizar um vídeo sobre a destilação por arraste a vapor. <br>
                                 <b>Crítica Pessoal:</b> uma atividade que foi bem complexa de se realizar, porém divertido de se ver. <br>
                                 <b>Habilidades:</b> C5 - H24, H25, H26, H27, H28 <br>
-                                <b><a href="xxx">Vídeo</a></b>
+                                <b><a href="https://youtube.com/shorts/p7EYvoruS8I">Vídeo</a></b>
                             </p>
                         </div>
                     </div>
