--- a/PORTF/linguas/index.html
+++ b/PORTF/linguas/index.html
@@ -203,7 +203,7 @@
                                 <b>H12</b> – Empregar recursos linguísticos para identificar e apresentar pontos de vista. <br>
                                 <b>H15</b> – Produzir trabalhos individuais e coletivos, explorando materiais e técnicas ligados ao universo das composições artísticas e de práticas corporais. <br>
                                 <b>H16</b> – Relacionar práticas corporais e artísticas à própria vida, ao convívio social e à formação de identidades. <br> <br>
-                                <b><a href="xxx">Vídeo</a></b>
+                                <b><a href="https://youtube.com/shorts/D24PtiQJgBk?si=q9AtvMl9mNM2WHLR">Vídeo</a></b>
                             </p>
                         </div>
                     </div>
