--- a/PORTF/tecnico/index.html
+++ b/PORTF/tecnico/index.html
@@ -96,7 +96,7 @@
                             <b>Assunto:</b> Site de Escola de Musica. <br>
                             <b>Objetivo:</b> Criar um site sobre uma escola de musica. <br>
                             <b>Habilidades:</b> Não Informadas. <br>
-                            <b><a href="https://docs.google.com/spreadsheets/d/1hhlz2OcL8djmVgKhenEg98hQoq35EnAZt_ZCIujiTEA/edit?usp=sharing">Planilha</a></b>
+                            <b><a href="https://isabelatodescatt2.github.io/blueMoon/">Site Postado</a></b>
                         </p>
                     </div>
                 </div>
@@ -110,3 +110,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
