--- a/PORTF/tecnico/index.html
+++ b/PORTF/tecnico/index.html
@@ -89,7 +89,7 @@
             <div class="p1texto"><h2>3º Trimestre Manutenção de Sistemas</h2></div>
             <div class="container">
                <div class="caixa">
-                    <img src="../fotos/xxx.png" alt="atividade 1">
+                    <img src="../fotos/bluemooners.png" alt="atividade 1">
                     <div class="descricao">
                         <div class="atv"><h4>Atividade 1</h4></div>
                         <p>
@@ -110,4 +110,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
